--- a/chatproject/chat/static/style.css
+++ b/chatproject/chat/static/style.css
@@ -1,6 +1,11 @@
 body {
     width: 100%;
-    background-color: rgb(255, 0, 166);
+    height: 100%;
+    background-color: #ddd;
+}
+
+#header {
+    background-color: #ffffffd0;
 }
 
 #container:hover {
@@ -8,12 +13,21 @@ body {
     transition: 0.2s;
 }
 
+#menu-btn {
+    background-color: #ffffffd0;
+}
+
 #emoji-list {
     display: none;
+    margin-bottom: 60px;
+    height: 200px;
+    width: 345px;
+    overflow: scroll;
 }
 
 #emoji {
-    background-color: #555;
+    background-color: #ffffffd0;
+    /* background-color: #555; */
     padding: 0px 0px 0px 5px;
     height: 40px;
 }
@@ -51,12 +65,9 @@ body {
 
 ul {
     padding: 0;
+    margin: 5px;
     display: flex;
     list-style: none;
-}
-
-p {
-    cursor: pointer;
 }
 
 .dropup:hover {
@@ -70,23 +81,17 @@ p {
 #chat-log {
     height: 500px;
     overflow-y: scroll;
-}
-
-#chat-log .person1 {
-    align-items: start;
-    justify-content: start;
-}
-
-.name {
-    color: rgb(100, 237, 102);
-    font-weight: bold;
+    padding: 0.5rem;
+    background-color: #ffffffd0;
+    border-top: solid 2px #b5b5b5;
+    border-bottom: solid 2px #b5b5b5;
 }
 
 .person1 {
     width: fit-content;
     margin-top: 10px;
     padding: 5px;
-    background-color: white;
+    background-color: lightblue;
     border: none;
     border-radius: 12px;
 }
@@ -95,26 +100,32 @@ p {
     width: fit-content;
     margin-top: 10px;
     padding: 5px;
-    color: aqua;
-    background-color: black;
+    /* color: aqua; */
+    background-color: lightslategrey;
     border: none;
     border-radius: 12px;
 }
 
 #footer {
+    /* background-color: #555; */
+    background-color: #ffffffd0;
     height: 8%;
     border-radius: 0px 0px 20px 20px;
 }
 
 #chat-message-input {
-    background-color: #888;
+    /* background-color: #888; */
+    background-color: #eaeaea;
     border-radius: 12px;
 }
 
-#chat-message-submit,
-#footer,
-#attachment-btn {
-    background-color: #555;
+#chat-message-submit {
+    background-color: #ffffffd0;
+}
+
+#emoji,
+#chat-message-submit {
+    /* background-color: #555; */
 }
 
 #emoji-sagi,
@@ -137,8 +148,15 @@ label {
     cursor: pointer;
 }
 
+a {
+    padding: 0;
+    margin: 0;
+    cursor: pointer;
+}
+
 li {
     padding: 0;
+    margin: 0;
 }
 
 .h-90 {
@@ -149,8 +167,29 @@ li {
     height: 80%;
 }
 
+.h-26 {
+    height: 26px;
+}
+
+i {
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+}
+
+.w-26 {
+    width: 26px;
+}
+
+.w-60 {
+    width: 60%;
+}
+
 .h-11 {
     height: 11%;
+}
+
+.h-600 {
+    height: 600px;
 }
 
 .h-72 {
@@ -159,4 +198,37 @@ li {
 
 .h-14 {
     height: 14%;
+    cursor: text;
+}
+
+
+
+/* ---------------------------------------- */
+/* .overlay {
+    padding: 5px;
+    width: 50px;
+    height: 100px;
+    border-radius: 15px;
+    position: absolute;
+    top: 50px;
+    left: 50px;
+    z-index: 9;
+    background: #767676;
+    display: none;
+} */
+
+.box {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.7;
+    background: #0057e3;
+}
+
+.overlay {
+    z-index: 9;
+    margin: 30px;
+    background: #009938;
 }
