--- a/chatproject/chat/templates/signup.html
+++ b/chatproject/chat/templates/signup.html
@@ -20,7 +20,7 @@
     {% if messages %}
   <div class="messages">
       {% for message in messages %}
-          <div class="alert alert-warning">
+          <div class="alert alert-danger">
               {{ message }}
           </div>
       {% endfor %}
@@ -31,7 +31,7 @@
         <hr>
         <form action="" method="post">
             {% csrf_token %}
-            {{form}}
+            {{form.as_p}}
             <input type="submit" value="Signup" class="btn btn-primary">
         </form>
     </div>
