--- a/chatproject/chat/static/style.css
+++ b/chatproject/chat/static/style.css
@@ -23,6 +23,7 @@ body {
     height: 200px;
     width: 345px;
     overflow: scroll;
+    /* transition: 1s; */
 }
 
 #emoji {
@@ -61,6 +62,7 @@ body {
     bottom: 50px;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    /* transition: 1s; */
 }
 
 ul {
@@ -75,7 +77,7 @@ ul {
     visibility: visible;
     bottom: 100%;
     width: 100%;
-    transition: 0.5s;
+    /* transition: 0.5s; */
 }
 
 #chat-log {
@@ -148,7 +150,13 @@ label {
     cursor: pointer;
 }
 
-a {
+/* a {
+    padding: 0;
+    margin: 0;
+    cursor: pointer;
+} */
+
+span {
     padding: 0;
     margin: 0;
     cursor: pointer;
@@ -169,11 +177,6 @@ li {
 
 .h-26 {
     height: 26px;
-}
-
-i {
-    -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);
 }
 
 .w-26 {
@@ -199,36 +202,4 @@ i {
 .h-14 {
     height: 14%;
     cursor: text;
-}
-
-
-
-/* ---------------------------------------- */
-/* .overlay {
-    padding: 5px;
-    width: 50px;
-    height: 100px;
-    border-radius: 15px;
-    position: absolute;
-    top: 50px;
-    left: 50px;
-    z-index: 9;
-    background: #767676;
-    display: none;
-} */
-
-.box {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0.7;
-    background: #0057e3;
-}
-
-.overlay {
-    z-index: 9;
-    margin: 30px;
-    background: #009938;
 }
